Bone offset between Rest Pose and Edit mode #46010

Closed
opened 2015-09-04 01:03:28 +02:00 by Juan Pablo Bouza · 17 comments

In the blend file you'll find two bones that in edit mode are perfectly overlapped but in pose mode they have an offset, even if the rig is in Rest Position.

The only reason I find for this to happen is the use of the "Apply Pose as Rest Pose" operator. If you run that operator multiple times you'll notice that the offset between the two bones gets even worse.

Even though the Apply Pose operator could be the cause of this undesirable offset, I've found out that this started to happen only after blender 2.71. If you open the file with Blender 2.70a, you'll see that if you toggle between Pose mode and Edit mode, the offset is fixed!!

apply_pose_bug.blend

In the blend file you'll find two bones that in edit mode are perfectly overlapped but in pose mode they have an offset, even if the rig is in Rest Position. The only reason I find for this to happen is the use of the "Apply Pose as Rest Pose" operator. If you run that operator multiple times you'll notice that the offset between the two bones gets even worse. Even though the Apply Pose operator could be the cause of this undesirable offset, I've found out that this started to happen only after blender 2.71. If you open the file with Blender 2.70a, you'll see that if you toggle between Pose mode and Edit mode, the offset is fixed!! [apply_pose_bug.blend](https://archive.blender.org/developer/F230159/apply_pose_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Juan Pablo Bouza 2015-09-04 01:03:28 +02:00
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4

Added subscriber: @sindra1961

Added subscriber: @sindra1961

Can you show a method to let it reappear in armature of simpler structure?
I can confirm a reported phenomenon, but do not understand a concrete procedure to produce it.
For example, can you reproduce it in Armature with three bone?

Can you show a method to let it reappear in armature of simpler structure? I can confirm a reported phenomenon, but do not understand a concrete procedure to produce it. For example, can you reproduce it in Armature with three bone?
Author
Member

Mmmm, no actually I don't know of a method to do so. Some time ago I spoke to Zanqdo about this and he also told me that he had seen such behavior with the Apply Pose operator, like if it messed up some things.

I just tried with a simple armature and it didn't happen, I wouldn't know how to reproduce this.

Anyway, I have the feeling that the solution for this is in the 2.70a to 2.71 transition. As I said, if you open the armature in 2.70a or previous versions, Blender automatically fixes the issue when toggling Edit Mode. So, my guess is that in those versions of Blender there were some kind of checks that didn't let Pose mode to be different from Edit mode... but well I'm just guessing here.

Mmmm, no actually I don't know of a method to do so. Some time ago I spoke to Zanqdo about this and he also told me that he had seen such behavior with the Apply Pose operator, like if it messed up some things. I just tried with a simple armature and it didn't happen, I wouldn't know how to reproduce this. Anyway, I have the feeling that the solution for this is in the 2.70a to 2.71 transition. As I said, if you open the armature in 2.70a or previous versions, Blender automatically fixes the issue when toggling Edit Mode. So, my guess is that in those versions of Blender there were some kind of checks that didn't let Pose mode to be different from Edit mode... but well I'm just guessing here.

bone of the parent of two bone which you pointed out is different.
It shows that it is arranged based on a different coordinate system.
If you change connected of bone of the parent of bad_offset-bone to ON, this phenomenon does not occur.
I do not know whether this is a thing by the difference in version of blender.

bone of the parent of two bone which you pointed out is different. It shows that it is arranged based on a different coordinate system. If you change connected of bone of the parent of bad_offset-bone to ON, this phenomenon does not occur. I do not know whether this is a thing by the difference in version of blender.
Author
Member

Oh man I'm so sorry, I thought I had deleted the rest of the bones!!!

Ok, here it is, new blend "apply_pose_bug_2", just 4 bones. No constraints or drivers or anything. The hierarchy is as follows:

1 parent of 2. 2 parent of bad_offset.

Now, the problem is still there, although I noticed something important... If you move 1 or 2 in Edit mode, the offset changes. It seems that when you move them closer to bad_offset, the offset decreases....

I know that this is a pain, cause it's something you cannot reproduce, but this armature is definitely bugged in 2.71+ and it wasn't in previous releases.

apply_pose_bug_2.blend

Oh man I'm so sorry, I thought I had deleted the rest of the bones!!! Ok, here it is, new blend "apply_pose_bug_2", just 4 bones. No constraints or drivers or anything. The hierarchy is as follows: 1 parent of 2. 2 parent of bad_offset. Now, the problem is still there, although I noticed something important... If you move 1 or 2 in Edit mode, the offset changes. It seems that when you move them closer to bad_offset, the offset decreases.... I know that this is a pain, cause it's something you cannot reproduce, but this armature is definitely bugged in 2.71+ and it wasn't in previous releases. [apply_pose_bug_2.blend](https://archive.blender.org/developer/F230193/apply_pose_bug_2.blend)

I calculated a position of bone in pose mode, but values seem to be different.

2.75(sub4)
== Pose ==
[bad_offset] world location: 0.59950 -0.01245 1.10259
[good] world location: 0.59950 -0.01245 1.10259

2.70a
== Pose ==
[bad_offset] world location: 0.59858 -0.01245 1.10260
[good] world location: 0.59858 -0.01245 1.10260

2.75(sub4)
275.png
2.70a
270a.png
I attach the script which I used for calculation.
calc.py
The position that slid seems to be right by the calculation.

I calculated a position of bone in pose mode, but values seem to be different. ``` 2.75(sub4) == Pose == [bad_offset] world location: 0.59950 -0.01245 1.10259 [good] world location: 0.59950 -0.01245 1.10259 2.70a == Pose == [bad_offset] world location: 0.59858 -0.01245 1.10260 [good] world location: 0.59858 -0.01245 1.10260 ``` 2.75(sub4) ![275.png](https://archive.blender.org/developer/F230236/275.png) 2.70a ![270a.png](https://archive.blender.org/developer/F230238/270a.png) I attach the script which I used for calculation. [calc.py](https://archive.blender.org/developer/F230243/calc.py) The position that slid seems to be right by the calculation.

Added subscriber: @mont29

Added subscriber: @mont29

Actually, it’s 3Ddrawing of non-parrented bone ('good') and editmode which is bad - if you place 3DCursor on head of those, you get x = 0.59858, when head of those bones (as reported by their matrix) is x = 0.59950

I would suspect some issue with our 'minimum bone length' enforcing (we do not allow zero-lenght bones), since diff seems to be only along X axis, which is also orientation of the parent "2" bone, a very short one.

Actually, it’s 3Ddrawing of non-parrented bone ('good') and editmode which is bad - if you place 3DCursor on head of those, you get `x = 0.59858`, when head of those bones (as reported by their matrix) is `x = 0.59950`… I would suspect some issue with our 'minimum bone length' enforcing (we do not allow zero-lenght bones), since diff seems to be only along X axis, which is also orientation of the parent "2" bone, a very short one.
Joshua Leung was unassigned by Bastien Montagne 2015-09-04 10:23:09 +02:00
Bastien Montagne self-assigned this 2015-09-04 10:23:09 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Ok, can confirm this is the shortness of bone "2" which is causing that issue - in Edit mode, move its tail along X axis by -0.002 and its child matches expected position nearly perfectly (the longer you make bone "2", the smaller the gap).

I’m going to see whether we can aliviate that, but afraid this will be just another float precision issue… :/

Ok, can confirm this is the shortness of bone "2" which is causing that issue - in Edit mode, move its tail along X axis by `-0.002` and its child matches expected position nearly perfectly (the longer you make bone "2", the smaller the gap). I’m going to see whether we can aliviate that, but afraid this will be just another float precision issue… :/
Author
Member

Bastien, but why is this corrected by 2.70a? At least from a user point of view

So, what do 2.70a and previous versions do differently from 2.71+ ?

Bastien, but why is this corrected by 2.70a? At least from a user point of view So, what do 2.70a and previous versions do differently from 2.71+ ?
Author
Member

Mmmm well I don't know if this helps but if you unparent 2 from 1, the offset is solved.

Also, I tried changing bone 2 values and I can say that if you perfectly align head and tail, the offset if gone. Well, the same happens if you rotate the bone randomly, at some positions there is no offset. Ok, this could be related to floating precision as Bastien says, but again, I don't understand why 2.70 doesn't have the issue. Really, I had never seen this inconsistencies between Edit mode and the armature in Rest Position before 2.71.

Mmmm well I don't know if this helps but if you unparent 2 from 1, the offset is solved. Also, I tried changing bone 2 values and I can say that if you perfectly align head and tail, the offset if gone. Well, the same happens if you rotate the bone randomly, at some positions there is no offset. Ok, this could be related to floating precision as Bastien says, but again, I don't understand why 2.70 doesn't have the issue. Really, I had never seen this inconsistencies between Edit mode and the armature in Rest Position before 2.71.

This issue was referenced by 65a80708d4

This issue was referenced by 65a80708d4ca0d28a9c6e35bf7429693b806e0b4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Found issue and fixed - my bet re 2.70 would be that we were handling roll nightmare differently by that time iirc - yes, all our Armature issues are related to demonic bone roll one way or the other, it seems. :(

Found issue and fixed - my bet re 2.70 would be that we were handling roll nightmare differently by that time iirc - yes, all our Armature issues are related to demonic bone roll one way or the other, it seems. :(
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46010
No description provided.